# stock-handbook

./: .gitignore  Cargo.toml  LICENSE  Procfile  README.md
backend/: Cargo.toml
backend/src/: app_state.rs  configs.rs  constants.rs  main.rs  strings.rs
backend/src/database/: mod.rs  mongo_repository.rs  repository.rs  repository_error.rs  stock_record_repository.rs  stock_repository.rs  user_repository.rs
backend/src/handlers/: auth.rs  history_handler.rs  inventory_handler.rs  mod.rs  stocks.rs
backend/src/models/: inventory.rs  inventory_model.rs  inventory_summary_model.rs  mod.rs  stock.rs  stock_error.rs  stock_model.rs  stock_record_model.rs  user.rs  user_model.rs
backend/src/routes/: auth.rs  history_route.rs  inventory_route.rs  mod.rs  stock.rs
frontend/: package-lock.json  package.json
frontend/src/: main.js
frontend/src/components/DashboardView/: DashboardView.html  DashboardView.js  DashboardView.vue
frontend/src/components/GlobalAlert/: GlobalAlert.html  GlobalAlert.js  GlobalAlert.vue
frontend/src/components/HistoryView/: HistoryView.html  HistoryView.js  HistoryView.vue
frontend/src/components/InventoryView/: InventoryView.html  (+2 more)
frontend/src/constants/: index.js
frontend/src/router/: index.js
frontend/src/store/: index.js
src/: app_state.rs  constants.rs  main.rs
src/database/: mod.rs  repository_error.rs
src/handlers/: auth_handler.rs  history_handler.rs  inventory_handler.rs
src/models/: inventory_summary_model.rs  stock_error.rs  stock_record_model.rs
src/routes/: auth_route.rs  history_route.rs  mod.rs
(+9 files in other folders)
