[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7"
actix-web = "4"
async-trait = "0.1"
bson = { version = "2.13.0", features = ["chrono-0_4"]}
chrono = { version = "0.4.38", features = ["serde"] }
env_logger = "0.11.5"
log = "0.4"
serde = "1.0.188"
serde_json = "1.0.128"
futures = "0.3.28"
thiserror = "1.0"
tokio = {version = "1.32.0", features = ["full"]}

[dependencies.mongodb]
version = "3.1.0"
