[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7"
actix-web = "4"
async-trait = "0.1"
env_logger = "0.11.5"
log = "0.4"
serde = "1.0.188"
futures = "0.3.28"
thiserror = "1.0"
tokio = {version = "1.32.0", features = ["full"]}

[dependencies.mongodb]
version = "3.1.0"
